[package]
name = "sandboxed"
version = "0.1.0"
publish = false
authors = ["Thomas Wilgenbus <thomas.wilgenbus@gmail.com>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = [
    "bevy/bevy_dylib",
]

[dependencies]
bevy = { version="0.11.3", default-features = false, path = "../bevy",  features = [
    "animation",
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "hdr",
    "zstd",
    "x11",
    "ktx2",
    "filesystem_watcher",
    "tonemapping_luts",
    "webgl2"
] }
bevy_kira_audio = { version = "0.17.0" }
bevy_asset_loader = { version = "0.17" }
rand = { version = "0.8.3" }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.28", default-features = false }
image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "2.3.0"

[patch.crates-io]
bevy = { version="0.11.3", path = "../bevy" }